--- a/css/style.css
+++ b/css/style.css
@@ -38,12 +38,20 @@ body
 
 .banner
 {
-	padding-top: 60px;
+	padding-top: 70px;
 	background: linear-gradient(rgba(12,45,70,0.8),rgba(12,45,70,0.6)), url(../images/sky.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	transition: 2s;
 	transition-timing-function: linear;
+}
+
+@media(max-width: 870px)
+{
+	.banner
+	{
+		padding-top: 60px;
+	}
 }
 
 #banner
@@ -57,13 +65,21 @@ body
 
 nav
 {
-	height: 60px;
+	height: 70px;
 	width: 100%;
 	z-index: 1000;
 	position: fixed;
 	top: 0;
 	background: transparent;
 	transition: 0.4s;
+}
+
+@media(max-width: 870px)
+{
+	nav
+	{
+		height: 60px;
+	}
 }
 
 nav img
