--- a/css/style.css
+++ b/css/style.css
@@ -1764,3 +1764,126 @@ label #bars
 		font-size: 15px;
 	}
 }
+
+.carousel-item.active,
+.carousel-item-next,
+.carousel-item-prev
+{
+    display:block;
+}
+
+.carousel-control-next-icon
+{
+	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e")
+}
+
+.carousel-control-prev-icon
+{
+	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e")
+}
+
+.carousel-indicators li
+{
+	background-color: #000;
+}
+
+.carousel-item
+{
+	width: 70%;
+	margin-left: 15%;
+}
+
+.carousel-control-next, .carousel-control-prev
+{
+	width: 15%;
+}
+
+@media(max-width: 991px)
+{
+	.carousel-item
+	{
+		width: 86%;
+		margin-left: 7%;
+	}
+
+	.carousel-control-next, .carousel-control-prev
+	{
+		width: 7%;
+	}
+}
+
+@media(max-width: 767px)
+{
+	.carousel-item
+	{
+		width: 92%;
+		margin-left: 4%;
+	}
+
+	.carousel-control-next, .carousel-control-prev
+	{
+		width: 4%;
+	}
+}
+
+.testimonial-name
+{
+	font-size: 30px;
+}
+
+.testimonial-height
+{
+	font-size: 20px;
+}
+
+@media(max-width: 991px)
+{
+	.testimonial-name
+	{
+		font-size: 27px;
+	}
+
+	.testimonial-height
+	{
+		font-size: 17px;
+	}
+}
+
+@media(max-width: 767px)
+{
+	.testimonial-name
+	{
+		font-size: 24px;
+	}
+
+	.testimonial-height
+	{
+		font-size: 15px;
+	}
+}
+
+@media(max-width: 440px)
+{
+	.testimonial-name
+	{
+		font-size: 21px;
+	}
+
+	.testimonial-height
+	{
+		font-size: 13px;
+	}
+}
+
+@media(max-width: 386px)
+{
+	.testimonial-name
+	{
+		font-size: 19px;
+	}
+
+	.testimonial-height
+	{
+		font-size: 12px;
+	}
+}
