--- a/css/style.css
+++ b/css/style.css
@@ -1892,3 +1892,39 @@ label #bars
 {
 	color: rgba(0,0,0,0.2);
 }
+
+.exp-digit
+{
+	font-size: 50px;
+	line-height: 60px;
+}
+
+.exp-digit:before
+{
+	content: '';
+	position: absolute;
+	width: 20px;
+	height: 20px;
+	opacity: 0.4;
+	background: #ff3d1c;
+	margin-top: 10px;
+	margin-left: 10px;
+	z-index: -1;
+}
+
+.exp-before:before
+{
+	content: '';
+	position: absolute;
+	width: 110px;
+	height: 60px;
+	opacity: 0.7;
+	z-index: -1;
+	border: 5px solid orange;
+}
+
+.exp-text
+{
+	font-size: 27px;
+	line-height: 30px;
+}
