--- a/css/style.css
+++ b/css/style.css
@@ -1895,36 +1895,15 @@ label #bars
 
 .exp-digit
 {
-	font-size: 50px;
+	font-size: 57px;
 	line-height: 60px;
-}
-
-.exp-digit:before
-{
-	content: '';
-	position: absolute;
-	width: 20px;
-	height: 20px;
-	opacity: 0.4;
-	background: #ff3d1c;
-	margin-top: 10px;
-	margin-left: 10px;
-	z-index: -1;
-}
-
-.exp-before:before
-{
-	content: '';
-	position: absolute;
-	width: 110px;
-	height: 60px;
-	opacity: 0.7;
-	z-index: -1;
-	border: 5px solid orange;
+	border-right: 1px solid;
+	padding-right: 5px;
+	margin-right: 5px;
 }
 
 .exp-text
 {
-	font-size: 27px;
+	font-size: 29px;
 	line-height: 30px;
 }
