--- a/css/style.css
+++ b/css/style.css
@@ -1866,24 +1866,25 @@ label #bars
 
 .testimonial-name
 {
-	font-size: 30px;
+	font-size: 18px;
 }
 
 .testimonial-height
 {
-	font-size: 20px;
+	font-size: 25px;
+	line-height: 1.5;
 }
 
 @media(max-width: 991px)
 {
 	.testimonial-name
 	{
-		font-size: 27px;
+		font-size: 16px;
 	}
 
 	.testimonial-height
 	{
-		font-size: 17px;
+		font-size: 22px;
 	}
 }
 
@@ -1891,25 +1892,25 @@ label #bars
 {
 	.testimonial-name
 	{
-		font-size: 24px;
+		font-size: 16px;
 	}
 
 	.testimonial-height
 	{
-		font-size: 15px;
+		font-size: 20px;
 	}
 }
 
-@media(max-width: 440px)
+@media(max-width: 507px)
 {
 	.testimonial-name
 	{
-		font-size: 21px;
+		font-size: 16px;
 	}
 
 	.testimonial-height
 	{
-		font-size: 13px;
+		font-size: 18px;
 	}
 }
 
@@ -1917,12 +1918,25 @@ label #bars
 {
 	.testimonial-name
 	{
-		font-size: 19px;
+		font-size: 15px;
 	}
 
 	.testimonial-height
 	{
-		font-size: 12px;
+		font-size: 18px;
+	}
+}
+
+@media(max-width: 333px)
+{
+	.testimonial-name
+	{
+		font-size: 14px;
+	}
+
+	.testimonial-height
+	{
+		font-size: 16px;
 	}
 }
 
