--- a/css/style.css
+++ b/css/style.css
@@ -792,7 +792,7 @@ label #bars
   
 .home-happy
 {
-	font-family: title;
+	font-family: 'Roboto Condensed', sans-serif;
 	font-size: 25px;
 	color: #555;
 }
@@ -831,7 +831,7 @@ label #bars
 
 .home-profile-info
 {
-	font-family: sans-serif;
+	font-family: 'Roboto', sans-serif;
 	font-size: 19px;
 }
 
@@ -891,6 +891,7 @@ label #bars
 #full-footer
 {
 	background: #2e373e;
+	font-family: 'Roboto', sans-serif;
 }
 
 .main-footer
@@ -1491,12 +1492,14 @@ label #bars
 {
 	font-size: 25px;
 	color: #001b5e;
+	font-family: 'Roboto', sans-serif;
 }
 
 .services-para
 {
 	font-size: 16px;
 	color: #57667e;
+	font-family: 'Roboto', sans-serif;
 }
 
 @media(max-width: 991px)
@@ -1785,12 +1788,14 @@ label #bars
 .testimonial-name
 {
 	font-size: 18px;
+	font-family: 'Roboto Condensed', sans-serif;
 }
 
 .testimonial-height
 {
 	font-size: 25px;
 	line-height: 1.5;
+	font-family: 'Roboto', sans-serif;
 }
 
 .cite
@@ -1934,6 +1939,7 @@ label #bars
 .exp-unit-area
 {
 	margin-left: 35px;
+	font-family: sans-serif;
 }
 
 .exp-unit-area h4
