--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body
 {
 	margin: 0;
 	padding: 0;
-	font-family: sans-serif;
+	font-family: 'Roboto';
 	background: white;
 	background-size: cover;
 	scroll-behavior: smooth;
