--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body
 {
 	margin: 0;
 	padding: 0;
-	font-family: 'Roboto';
+	font-family: 'Roboto', sans-serif;
 	background: white;
 	background-size: cover;
 	scroll-behavior: smooth;
@@ -1024,7 +1024,7 @@ label #bars
 
 .contact-head
 {
-	font-family: sans-serif;
+	font-family: 'Roboto', sans-serif;
 	font-size: 20px;
 	padding: 5px 0;
 	color: #001b5e;
@@ -1032,7 +1032,7 @@ label #bars
 
 .contact-call
 {
-	font-family: sans-serif;
+	font-family: 'Roboto', sans-serif;
 	color: rgba(21,69,115,0.8);
 	font-size: 16px;
 }
@@ -1050,7 +1050,7 @@ label #bars
 
 .contact-info
 {
-	font-family: sans-serif;
+	font-family: 'Roboto', sans-serif;
 	color: rgba(21,69,115,0.8);
 	padding: 5px 0 10px;
 	font-size: 16px;
@@ -1068,7 +1068,7 @@ label #bars
 
 .contact-info-special
 {
-	font-family: sans-serif;
+	font-family: 'Roboto', sans-serif;
 	color: #001b5e;
 	padding: 5px 0;
 	font-size: 16px;
@@ -1929,7 +1929,7 @@ label #bars
 {
 	font-size: 120px;
 	line-height: 120px;
-	font-family: roboto, sans-serif;
+	font-family: 'Roboto', sans-serif;
 	font-weight: 700;
 	color: #ff5e13;
 	padding-right: 35px;
@@ -1940,7 +1940,7 @@ label #bars
 .exp-unit-area
 {
 	margin-left: 35px;
-	font-family: sans-serif;
+	font-family: 'Roboto', sans-serif;
 }
 
 .exp-unit-area h4
